--- a/RaceSimulator/RaceSimulator.csproj
+++ b/RaceSimulator/RaceSimulator.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="CLI\" />
+    <Folder Include="RaceLogic\" />
+  </ItemGroup>
+
 </Project>
